# pyminiplatform

./: .replit  README.md  common.py  configs.py  effects.py  entities.py  game.py  levels.py  main.py  pyproject.toml  replit.md
src/miniplatform/: __init__.py  __main__.py  commands.py  configs.py  effects.py  entities.py  exceptions.py  game.py  levels.py  serializers.py  utils.py
src/miniplatform/static/: level_maps.json
