[project]
name = "miniplatform"
version = "0.1.0"
description = "A simple 2D platform game written in Python."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame>=2.6.1",
]

[project.scripts]
miniplatform = "miniplatform:main"

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"
